--- a/src/styles/less/style.less
+++ b/src/styles/less/style.less
@@ -1,5 +1,18 @@
+@import (less) "bootstrap.css";
+
 html, body {
 	margin: 0;
 	padding: 0;
 	font-size: 16px;
 }
+
+.wrapper {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+#header, #main, #sidebar, #footer {
+  flex: 1 100%;
+}
+
+@import (less) "mobile.less";
