--- a/src/styles/less/style.less
+++ b/src/styles/less/style.less
@@ -1,9 +1,27 @@
 @import (less) "bootstrap.css";
 
+//Main Colors
+@mc: #30608e;
+@dc: #244667;
+@ddc: #172c41;
+
+//Unsaturated Colors
+@uscm: #f4f4f4;
+@usdc: #878787;
+@usddc: #757575;
+	
+//Body Color
+@bc: #333;
+
 html, body {
 	margin: 0;
 	padding: 0;
+
+	
+
 	font-size: 16px;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 200;
 }
 
 .wrapper {
@@ -13,6 +31,94 @@ html, body {
 
 #header, #main, #sidebar, #footer {
   flex: 1 100%;
+}
+
+#header {
+	padding: 10px;
+	background-color: @ddc;
+	color: #fff;
+	
+	.page-title {
+		font-size: 1.4rem;
+		font-weight: 700;
+	}
+}
+
+.wrapper {
+	background-color: #fff;
+}
+
+html, body, #footer {
+	background-color: @uscm;
+	color: @bc;
+}
+
+#footer {
+	color: #888;
+	padding: 10px;
+
+	p {
+		padding: 0;
+		margin: 0;
+	}
+}
+
+.accordian {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+
+	user-select: none;
+	li {
+		padding: 0;
+		margin: 0;
+	}
+
+	.row-content {
+		padding: 2px;
+		margin: 2px;
+		display: block;
+		cursor: pointer;
+
+		&:hover {
+			background-color: rgba(red(@mc),green(@mc),blue(@mc),1);
+			color: #fff;
+			font-weight: 200;
+		}
+
+		&.depth-0 {
+			padding-left: 5px;
+		}
+
+		&.depth-1 {
+			padding-left: 10px;
+		}
+
+		&.depth-2 {
+			padding-left: 15px;
+		}
+
+		&.depth-3 {
+			padding-left: 25px;
+		}
+
+		&.depth-4 {
+			padding-left: 30px;
+		}
+
+		&.depth-5 {
+			padding-left: 35px;
+		}
+
+		&.depth-6 {
+			padding-left: 40px;
+		}
+		
+	}
+}
+
+.accordian.active {
+	background-color: rgba(red(@mc),green(@mc),blue(@mc),0.1);
 }
 
 @import (less) "mobile.less";
