--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -2,4 +2,5 @@ title Jade test
 script(src='//localhost:35729/livereload.js')
 script(src='/assets/scripts/angular.js')
 script(src='/assets/scripts/app.js')
+link(href='http://fonts.googleapis.com/css?family=Roboto:400,200,700' rel='stylesheet' type='text/css')
 link(rel="stylesheet" href="/assets/styles/style.css")
