--- a/src/styles/less/style.less
+++ b/src/styles/less/style.less
@@ -19,9 +19,8 @@ html, body {
 
 	
 
-	font-size: 16px;
-	font-family: 'Roboto', sans-serif;
-	font-weight: 200;
+	font-size: 14px;
+	font-family: Arial;
 }
 
 .wrapper {
@@ -46,6 +45,10 @@ html, body {
 
 .wrapper {
 	background-color: #fff;
+}
+
+#main {
+	padding: 10px;
 }
 
 html, body, #footer {
