--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -5887,9 +5887,8 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-size: 16px;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 200;
+  font-size: 14px;
+  font-family: Arial;
 }
 .wrapper {
   display: -webkit-box;
@@ -5920,6 +5919,9 @@ body {
 }
 .wrapper {
   background-color: #fff;
+}
+#main {
+  padding: 10px;
 }
 html,
 body,
