Restarted, now load all marketgroups at start

--- a/views/layouts/sidebar-layout.jade
+++ b/views/layouts/sidebar-layout.jade
@@ -1,7 +1,7 @@
 extends base
 
 block content
-	.wrapper(ng-app="app")
+	.wrapper(ng-app="ExplorerApp")
 		header#header
 			block header
 		aside#sidebar
