--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -1,6 +1,5 @@
 title Jade test
 script(src='//localhost:35729/livereload.js')
 script(src='/assets/scripts/angular.js')
-script(src='/assets/scripts/app.js')
-script(src='/assets/scripts/directives.js')
+script(src='/assets/scripts/app/app.js')
 link(rel="stylesheet" href="/assets/styles/style.css")
