--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -7425,28 +7425,60 @@ body {
   font-size: 14px;
   font-family: Arial;
 }
+html,
+body,
 .wrapper {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-flow: row wrap;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap;
+  height: 100%;
+  width: 100%;
+  max-height: 100%;
 }
-#header,
-#main,
-#sidebar,
-#footer {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 100%;
-  -ms-flex: 1 100%;
-  flex: 1 100%;
-}
-#main,
-#header,
-#footer {
+#header {
+  height: 60px;
+  line-height: 40px;
   padding: 10px;
+}
+#footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 40px;
+  line-height: 20px;
+  padding: 10px;
+}
+#sidebar {
+  position: absolute;
+  top: 60px;
+  left: 0;
+  bottom: 40px;
+  width: 500px;
+}
+.sidebar-container {
+  height: 100%;
+}
+.sidebar-left {
+  float: left;
+  width: 250px;
+  height: 100%;
+  overflow-y: scroll;
+  /* Let's get this party started */
+  /* Track */
+  /* Handle */
+}
+.sidebar-left::-webkit-scrollbar {
+  width: 4px;
+}
+.sidebar-left::-webkit-scrollbar-track {
+  background-color: #eee;
+}
+.sidebar-left::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  background-color: #ddd;
+}
+.sidebar-right {
+  float: left;
+  width: 250px;
+  height: 100%;
 }
 .accordian {
   list-style: none;
@@ -7465,6 +7497,9 @@ body {
   height: 20px;
   line-height: 20px;
   display: block;
+}
+.node-name {
+  text-overflow: ellipsis;
 }
 .accordian li .node-name {
   padding-left: 5px;
@@ -7485,6 +7520,7 @@ html,
 body {
   background-color: #f4f4f4;
   color: #333333;
+  font-size: 12px;
 }
 #header {
   background-color: #172c41;
@@ -7517,8 +7553,8 @@ body,
   padding: 0;
   margin: 0;
 }
-.accordian .node-name.active :before {
-  content: "\f107";
+.accordian .node-name.expanded {
+  text-decoration: underline;
 }
 .accordian li {
   cursor: pointer;
@@ -7528,39 +7564,5 @@ body,
   display: block;
 }
 .accordian li .node-name:hover {
-  background-color: #30608e;
-  color: #fff;
-}
-@media all and (min-width: 800px) {
-  /* We invert order of first sidebar and main
-	* And tell the main element to take twice as much width as the other two sidebars 
-	*/
-  #main {
-    -webkit-box-flex: 40;
-    -webkit-flex: 40 0px;
-    -ms-flex: 40 0px;
-    flex: 40 0px;
-  }
-  #sidebar {
-    -webkit-box-ordinal-group: 2;
-    -webkit-order: 1;
-    -ms-flex-order: 1;
-    order: 1;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1 auto;
-    -ms-flex: 1 auto;
-    flex: 1 auto;
-  }
-  #main {
-    -webkit-box-ordinal-group: 3;
-    -webkit-order: 2;
-    -ms-flex-order: 2;
-    order: 2;
-  }
-  #footer {
-    -webkit-box-ordinal-group: 4;
-    -webkit-order: 3;
-    -ms-flex-order: 3;
-    order: 3;
-  }
+  background-color: #fff;
 }
