--- a/src/styles/less/layout.less
+++ b/src/styles/less/layout.less
@@ -1,15 +1,28 @@
 html, body {
 	margin: 0;
 	padding: 0;
-
-	font-size: 14px;
-	font-family: Arial;
 }
 
 html, body, .wrapper {
 	height: 100%;
 	width: 100%;
 	max-height: 100%;
+}
+
+/* Let's get this party started */
+::-webkit-scrollbar {
+    width: 4px;
+}
+ 
+/* Track */
+::-webkit-scrollbar-track {
+	background-color: #eee;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+	background-color: #ccc;
 }
 
 #header {
@@ -47,21 +60,7 @@ html, body, .wrapper {
 	height: 100%;
 	overflow-y: scroll;
 
-	/* Let's get this party started */
-	&::-webkit-scrollbar {
-	    width: 4px;
-	}
-	 
-	/* Track */
-	&::-webkit-scrollbar-track {
-		background-color: #eee;
-	}
-	 
-	/* Handle */
-	&::-webkit-scrollbar-thumb {
-	    -webkit-border-radius: 10px;
-		background-color: #ddd;
-	}
+
 }
 
 .sidebar-right {
@@ -80,13 +79,11 @@ html, body, .wrapper {
 	li {
 		padding: 0;
 		margin: 0;
-
-		.node-name {
-			height: 20px;
-			line-height: 20px;
-			display: block;
-		}
 	}
+}
+
+.sidebar-selectable {
+	padding: 0 5px;
 }
 
 .node-name {
@@ -124,4 +121,15 @@ html, body, .wrapper {
 			}
 		}
 	}
+}
+
+.upper-sidebar-right {
+	overflow-y: scroll;
+	height: 50%;
+}
+
+.lower-sidebar-right {
+	overflow-y: scroll;
+	height: 50%;
+	padding: 5px;
 }
