--- a/src/styles/less/layout.less
+++ b/src/styles/less/layout.less
@@ -69,6 +69,10 @@ html, body, .wrapper {
 	height: 100%;
 }
 
+.main-content {
+	padding-left: 500px;
+}
+
 .accordian {
 	list-style: none;
 	padding: 0;
